--- a/_includes/form.html
+++ b/_includes/form.html
@@ -37,22 +37,13 @@
     <textarea name="comments" class="form-control" id="comments" rows="3"></textarea>
   </div>
   <p>Data Privacy</p>
-  <p class="small">Checkmirrors values your data privacy. We will only ever use your data to contact you about specific enquiries made unless otherwise agreed. Your data will never be disclosed to or used by another business or external third party. By clicking submit, you agree to allow checkmirrors to contact you about the above enquiry.</p>
+  <p class="small">Checkmirrors values your data privacy. We will only ever use your data to contact you about specific enquiries made unless otherwise agreed. Your data will never be disclosed to or used by another business or external third party. By clicking submit, you agree to allow checkmirrors to contact you about your above enquiry.</p>
   <div class="form-check">
     <input class="form-check-input" type="checkbox" id="marketCheck" data-status="false">
     <label class="form-check-label" for="marketCheck">
       <p class="small">Recieve emails from checkmirrors about news & offers.</p>
     </label>
   </div>
-<div class="form-check mb-3">
-  <input class="form-check-input" type="checkbox" id="consentCheck" data-status="false">
-  <label class="form-check-label" for="consentCheck">
-    <p class="small mb-0">Allow checkmirrors to contact you regarding your enquiry only.</p>
-  </label>
-  <div class="invalid-feedback" id="consentInvalid">
-    Please accept our data privacy statement to proceed.
-  </div>
-</div>
   <button class="btn btn-primary btn-responsive" type="submit" id="bookFormSubmit">Submit</button>
   <br>
   <p class="small"><span class="required">*</span> Indicates required fields</p>
