--- a/css/main.scss
+++ b/css/main.scss
@@ -231,7 +231,7 @@ ul.home-features {
 .footer-area.section_gap {
   padding: 50px 0;
 }
-input.success {
+input.success,textarea.success {
   background-color: white;
   border: 1px solid green!important;
 }
@@ -259,4 +259,17 @@ label.error {
 }
 .not-found p {
   line-height: 120px;
+}
+.youtube-video {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.youtube-video iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
