--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,16 +1,31 @@
 ---
 layout: default
 ---
-
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
-
-  <header class="post-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-  </header>
-
-  <div class="post-content" itemprop="articleBody">
-    {{ content }}
-  </div>
-
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-12 mt-b">
+        <div class="card my-5">
+          <div class="row">
+            <div class="col-sm-12 col-md-4">
+              <div class="card-img-top">
+                <img src="{{ page.image }}" class="card-img-top" />
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-8">
+              <div class="card-body">
+                <h2 class="card-title" itemprop="name headline">{{ page.title }}</h2>
+                <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope
+                    itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+                <div class="card-text">
+                  <div class="post-content" itemprop="articleBody">
+                    {{ content }}
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 </article>
