--- a/_includes/features_section.html
+++ b/_includes/features_section.html
@@ -6,11 +6,11 @@
           <div class="icon">{{ page.features_section.learner.icon }}</div>
           <div class="desc">
             <h4 class="mt-3 mb-2">{{ page.features_section.learner.heading }}</h4>
-            <ul class="home-features">
+            <ul class="home-features mb-0">
               {% for feature in page.features_section.learner.features %}
               <li><i class="fas fa-check"></i> {{ feature }}</li>
               {% endfor %}
-              <a href="{{site.github.url}}{{ page.features_section.learner.feature_cta.button_link }}" class="primary-btn btn-bg">{{ page.features_section.learner.feature_cta.button_text }}</a>
+              <a href="{{site.github.url}}{{ page.features_section.learner.feature_cta.button_link }}" class="primary-btn btn-bg mt-3">{{ page.features_section.learner.feature_cta.button_text }}</a>
             </ul>
           </div>
         </div>
@@ -20,11 +20,11 @@
           <div class="icon">{{ page.features_section.instructor.icon }}</div>
           <div class="desc">
             <h4 class="mt-3 mb-2">{{ page.features_section.instructor.heading }}</h4>
-            <ul class="home-features">
+            <ul class="home-features mb-0">
               {% for feature in page.features_section.instructor.features %}
               <li><i class="fas fa-check"></i> {{ feature }}</li>
               {% endfor %}
-              <a href="{{site.github.url}}{{ page.features_section.instructor.feature_cta.button_link }}" class="primary-btn btn-bg">{{ page.features_section.instructor.feature_cta.button_text }}</a>
+              <a href="{{site.github.url}}{{ page.features_section.instructor.feature_cta.button_link }}" class="primary-btn btn-bg mt-3">{{ page.features_section.instructor.feature_cta.button_text }}</a>
             </ul>
           </div>
         </div>
